<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="nop">Num of Pax</string>
    <string name="svsDisabled">NO SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="gstEnabled">GST</string>
    <string name="gstDisabled">NO GST</string>
    <string name="dis">Discount (%)</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="totalbill" />
    <string name="eachpay" />

</resources>